hphp/hack/test/typecheck/array_filter1.php.exp
File "array_filter1.php", line 4, characters 16-16:
Invalid argument (Typing[4110])
File "hhi_lib__srcs/stdlib/builtins_array.hhi", line 86, characters 27-35:
This is an object of type Container
File "array_filter1.php", line 4, characters 16-16:
It is incompatible with an int
