hphp/hack/test/typecheck/array_filter1.php
<?hh

function test() {
  array_filter(0);
}
